@@ -118,6 +118,7 @@ Changes for 1.5:
 
 Changes for 1.4.6:
 
+ - [ZBX-404] fixed update of item "Download speed for scenario '...'" (Sasha)
  - [ZBX-272] fixed default link to local interface in *BSD for net.if* items (Sasha)
  - [ZBX-386] fixed possible agent crash in processing of active checks (Sasha)
  - [ZBX-379] added error checking for accept on server side (Sasha) 
